<resources>
    <string name="app_name">ScanNPlan</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">"Event Name: "</string>
    <string name="event_date">Date:</string>
    <string name="event_time">Time:</string>
    <string name="event_location">Location:</string>
    <string name="event_details">Details/Notes:</string>
    <string name="hello">Hello World</string>
    <string name="link_text">Link:</string>

    <string name="view_qr_y">View QR</string>

    <string name="real_time_attendance_placeholder">Real time attendance: %d</string>
    <string name="max_attendees">Max Attendees:</string>
    <string name="edits_name">Edit Name:</string>
    <string name="edits_date">Edit Date:</string>
    <string name="edits_time">Edit Time:</string>
    <string name="edits_location">Edit Location:</string>
    <string name="edits_max_peeps">Edit Max Attendees</string>
    <string name="edits_details">Edit Details:</string>

</resources>